[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/ui/hurt/hurt.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/ui/fps_ping_displayer/fps_ping_displayer.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/joystick/virtual_joystick.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/ui/hero_info/hero_info.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/ui/loading/action_delay.tscn" type="PackedScene" id=5]
[ext_resource path="res://addons/SafeArea/SafeArea.gd" type="Script" id=6]
[ext_resource path="res://gameplay/showcase/ui/ui.gd" type="Script" id=12]

[node name="ui" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 12 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="hurt" parent="CanvasLayer/Control" instance=ExtResource( 1 )]

[node name="SafeArea" type="MarginContainer" parent="CanvasLayer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 6 )

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control/SafeArea"]
margin_right = 600.0
margin_bottom = 1024.0
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Control/SafeArea/HBoxContainer"]
margin_right = 2.0
margin_bottom = 1024.0
rect_min_size = Vector2( 2, 0 )
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/SafeArea/HBoxContainer"]
margin_left = 6.0
margin_right = 594.0
margin_bottom = 1024.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer/Control/SafeArea/HBoxContainer/VBoxContainer"]
margin_right = 588.0
margin_bottom = 2.0
rect_min_size = Vector2( 0, 2 )
mouse_filter = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/Control/SafeArea/HBoxContainer/VBoxContainer"]
margin_top = 6.0
margin_right = 588.0
margin_bottom = 106.0

[node name="hero_info" parent="CanvasLayer/Control/SafeArea/HBoxContainer/VBoxContainer/HBoxContainer2" instance=ExtResource( 4 )]
margin_right = 104.0
margin_bottom = 100.0

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Control/SafeArea/HBoxContainer/VBoxContainer/HBoxContainer2"]
margin_left = 108.0
margin_right = 588.0
margin_bottom = 100.0
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Control/SafeArea/HBoxContainer/VBoxContainer"]
margin_top = 110.0
margin_right = 588.0
margin_bottom = 491.0
mouse_filter = 2
size_flags_vertical = 3

[node name="Control" type="Control" parent="CanvasLayer/Control/SafeArea/HBoxContainer/VBoxContainer"]
margin_top = 495.0
margin_right = 588.0
margin_bottom = 995.0
rect_min_size = Vector2( 0, 500 )
mouse_filter = 2

[node name="virtual_joystick" parent="CanvasLayer/Control/SafeArea/HBoxContainer/VBoxContainer/Control" instance=ExtResource( 3 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -100.0
margin_right = 100.0
margin_bottom = 100.0
rect_pivot_offset = Vector2( 100, 100 )
joystick_mode = 1

[node name="fps_ping_displayer" parent="CanvasLayer/Control/SafeArea/HBoxContainer/VBoxContainer" instance=ExtResource( 2 )]
margin_top = 999.0
margin_right = 588.0
margin_bottom = 1024.0
mode = 1

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer/Control/SafeArea/HBoxContainer"]
margin_left = 598.0
margin_right = 600.0
margin_bottom = 1024.0
rect_min_size = Vector2( 2, 0 )
mouse_filter = 2

[node name="action_delay" parent="CanvasLayer/Control" instance=ExtResource( 5 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -64.0
margin_right = 64.0
margin_bottom = 64.0
